--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -1,48 +1,39 @@
 * {
     box-sizing: border-box;
 }
-
-h1 {
-    font-size: 42px
-}
-
-.logo {
-    margin-left: 920px;
-}
+h1 {font-size: 42px}
 
 body {
-    background-color: rgba(255, 255, 255, 0);
+    background-color: rgba(255, 255, 255);
     font: 16px/1.42857 "Helvetica Neue", Helvetica, Arial, sans-serif;
-    margin: 0;
-    overflow: auto;
+    margin: 0; overflow: auto;
 }
-
 header {
     background-color: #373737;
     color: #fff;
     height: 200px;
-    padding: 50px 50px;
-    overflow: hidden;
+    padding: 50px 50px; overflow: hidden;
 }
+input {background-color: white; font-size: 16px}
+.date {border: 2px solid #ddd; height: 40px; width: 150px; padding: 5px 5px; font-size: 14px; margin-top: 20px; color: #0000CD; background: #FFFFFF}
+.taskname {border: 2px solid #ddd; height: 40px; width: 700px; padding: 10px 20px; font-size: 18px; margin-top: 20px; color: #373737 }
+.task {border: 2px solid #ddd; height: 200px; width: 700px; padding: 10px 20px; font-size: 18px; margin-top: 20px }
+textarea {font: 16px/1.42857 "Helvetica Neue", Helvetica, Arial, sans-serif; color: #373737}
 
-input {
-    background-color: white;
-    font-size: 16px
-}
+
+.selcls {border: 1px solid #ddd; height: 60px; width: 400px; padding: 10px 20px; font-size: 14px; }
+
 
 nav {
     background-color: #FFA500;
     border: 1px solid #ddd;
     margin-bottom: 30px;
-    height: 80px;
-    overflow: hidden;
+    height: 80px; overflow: hidden;
 }
 
 nav ul li {
     float: left;
-    margin-right: 10px;
-    list-style: none;
-    overflow: hidden;
+    margin-right: 10px; list-style: none; overflow: hidden;
 }
 
 a.button {
@@ -57,38 +48,29 @@ a.button {
     border-radius: 2px;
     transition: 0.2s;
 }
+a.button:hover { background: #FF8C00; }
+a.button:active { background: white;  color: #FF4500 }
+h2 {font-size: 28px; margin-bottom: -10px; color: #373737}
 
-a.button:hover {
-    background: #FF8C00;
-}
-
-a.button:active {
-    background: white;
-    color: #FF4500
-}
-
-h2 {
-    font-size: 28px;
-    margin-bottom: -10px;
-    color: #373737
-}
-
-h3 {
-    font-size: 16px;
-    color: #373737
-}
-
-p {
-    color: #373737
-}
-
+h3 {font-size: 16px; color: #373737}
+p {color: #373737}
 main {
     padding: 10px 20px;
     width: 1170px;
     display: block;
     overflow: hidden;
 }
-
+.buttonstart {
+    display: inline-block;
+    color: #FFA500;
+    font-weight: 700;
+    text-decoration: none;
+    user-select: none;
+    padding: .5em 1em;
+    outline: none;
+    border: 2px solid;
+    border-radius: 2px;
+    margin: 50px}
 .buttonclose {
     display: inline-block;
     color: #FFA500;
@@ -101,12 +83,7 @@ main {
     border-radius: 2px;
     transition: 0.2s;
 }
-
-.buttonclose:hover {
-    background: #FF4500;
-    border: 2px solid;
-    color: white
-}
+.buttonclose:hover { background: #FF4500; border: 2px solid; color: white }
 
 article {
     float: left;
@@ -115,7 +92,6 @@ article {
     width: 70%;
     overflow: hidden;
 }
-
 section {
     fbackground-color: #eee;
     border: 2px solid #ccc;
@@ -126,17 +102,8 @@ section {
     overflow: hidden;
     position: static;
 }
-
-table {
-    margin-top: 14px
-}
-
-td {
-    padding-top: 15px;
-    padding-right: 5px;
-    color: #4169E1;
-}
-
+table {margin-top: 14px }
+td {padding-top: 15px; padding-right: 5px;color: #4169E1;  }
 aside {
 
     float: left;
@@ -146,10 +113,7 @@ aside {
     overflow: hidden;
     position: relative;
 }
-
-.dedline {
-    color: #FF4500
-}
+.dedline {color: #FF4500}
 
 footer {
     font-size: 12px;
@@ -158,11 +122,4 @@ footer {
     color: #373737;
     padding: 20px 50px;
 }
-
-.login {
-    background: #FFA500;
-    border: 1px solid #ccc;
-    padding: 8px 14px;
-    font-size: 16px;
-    color: white
-}
+.login {background: #FFA500; border: 1px solid #ccc; padding: 8px 14px; font-size: 16px; color: white }
