--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -4,7 +4,7 @@
 h1 {font-size: 42px}
 
 body {
-    background-color: rgba(255, 255, 255);
+    background-color: rgba(255, 255, 255,0);
     font: 16px/1.42857 "Helvetica Neue", Helvetica, Arial, sans-serif;
     margin: 0; overflow: auto;
 }
@@ -88,7 +88,7 @@ main {
 article {
     float: left;
     margin-bottom: 30px;
-    padding: 0px 25px;
+    padding: 0 25px;
     width: 70%;
     overflow: hidden;
 }
